Commit stable application